--- a/templates/generals.page.gohtml
+++ b/templates/generals.page.gohtml
@@ -52,7 +52,39 @@
         </div>
     </form>
     `
-            attention.custom({msg: html, title: "Choose your dates"});
+            attention.custom({
+                msg: html,
+                title: "Choose your dates",
+                willOpen: () => {
+                    const elem = document.getElementById("reservation-dates-modal");
+                    const rp = new DateRangePicker(elem, {
+                        format: 'yyyy-mm-dd',
+                        showOnFocus: true,
+                        orientation: 'top'
+                    })
+                },
+                didOpen: () => {
+                    // Inputs are disabled so that the datepicker does not auto open when modal opens.
+                    // After modal is opened, we remove the disabled attribute since it's no longer needed.
+                    document.getElementById('start').removeAttribute('disabled');
+                    document.getElementById('end').removeAttribute('disabled');
+
+                },
+                callback: function (result) {
+                    let form = document.getElementById("check-availability-form")
+                    let formData = new FormData(form);
+                    formData.append("csrf_token", "{{.CSRFToken}}")
+
+                    fetch('/search-availability-json', {
+                        method: "post",
+                        body: formData
+                    })
+                        .then(response => response.json())
+                        .then(data => {
+                            console.log(data);
+                        })
+                }
+            });
         })
     </script>
 {{end}}
