--- a/templates/search-availability.page.gohtml
+++ b/templates/search-availability.page.gohtml
@@ -7,7 +7,8 @@
             <div class="col-md-6">
                 <h1 class="mt-5">Search for Availability</h1>
 
-                <form action="" method="get" novalidate class="needs-validation">
+                <form action="/search-availability" method="post" novalidate class="needs-validation">
+                    <!-- Input CSRF Token field is required for nosurf to work -->
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <div class="row">
                         <div class="col">
