Added error, flash and warning messages that display to the user in all pages via the base layout.
Also added basic testing for the web package.

--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -134,6 +134,18 @@
             })
         }
 
+        // Error is the name of the variable in TemplateData.
+        {{with .Error}}
+        notify("{{.}}", "error")
+        {{end}}
+
+        {{with .Flash}}
+        notify("{{.}}", "success")
+        {{end}}
+
+        {{with .Warning}}
+        notify("{{.}}", "warning")
+        {{end}}
 
         function Prompt() {
 
