--- a/templates/make-reservation.page.gohtml
+++ b/templates/make-reservation.page.gohtml
@@ -7,8 +7,15 @@
                 <h1 class="mt-3">Make Reservation</h1>
                 <!-- $res is just a variable name. Index searches for the key Data in the payload returned by the template handler-->
                 {{$res := index .Data "reservation"}}
-                <form method="post" action="" class="" novalidate>
-                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                <p><strong>Reservation Details</strong><br>
+                    Room: {{$res.Room.RoomName}}<br>
+                    Arrival: {{index .StringMap "start_date"}}<br>
+                    Departure: {{index .StringMap "end_date"}}<br></p>
+                <form action="/make-reservation" method="post" class="" novalidate>
+                <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
+                <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
+                <input type="hidden" name="room_id" value="{{$res.RoomID}}">
 
                     <div class="form-group mt-3">
                         <label for="first_name">First Name:</label>
@@ -32,17 +39,6 @@
                                name='last_name' value="{{$res.LastName}}" required>
                     </div>
 
-                    <div class="form-group">
-                        <label for="start_date">Start Date</label>
-                        <input type="text" name="start_date" id="start_date" class="form-control">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="end_date">End Date</label>
-                        <input type="text" name="end_date" id="end_date" class="form-control">
-                    </div>
-
-                    <input type="hidden" name="room_id" value="1">
 
                     <div class="form-group">
                         <label for="email">Email:</label>
