Added functionality to make a reservation of the General's Quarters room from its page directly, instead of having to go to the Book Now button.

--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -207,11 +207,15 @@
                 const {
                     msg = "",
                     title = "",
+                    icon = "",
+                    showConfirmButton = true,
                 } = c
 
                 const {value: result} = await Swal.fire({
                     title: title,
                     html: msg,
+                    icon: icon,
+                    showConfirmButton: showConfirmButton,
                     backdrop: false,
                     showCancelButton: true,
                     focusConfirm: false,
