--- a/templates/login.page.gohtml
+++ b/templates/login.page.gohtml
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col">
                 <h1>Login</h1>
-                <form method="post" action="/user/login">
+                <form method="post" action="/user/login" novalidate>
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <div class="form-group mt-3">
                         <label for="email">Email:</label>
@@ -19,7 +19,7 @@
                                name='email' value="" required>
                     </div>
 
-                    <div class="form-group ">
+                    <div class="form-group">
                         <label for="password">Password:</label>
                         <!-- Form variable comes from TemplateData.Form, this syntax means "if it exists" -->
                         {{with .Form.Errors.Get "password"}}
