+ Seeded reservations table with some default reservations to populate the admin page. Cameos included. + Added Admin Layout for All Reservations page, allowing the admin user to see a datatable of all the existing reservations.

--- a/templates/admin.layout.gohtml
+++ b/templates/admin.layout.gohtml
@@ -18,6 +18,14 @@
         <!-- endinject -->
         <link rel="shortcut icon" href="/static/admin/images/favicon.png"/>
 
+        <!--Change background to white for the datatable used in admin layout for all reservations.
+        Allows for a stripped table look -->
+        <style>
+            .content-wrapper{
+                background: white;
+            }
+        </style>
+
         {{block "css" . }}
 
         {{end}}
