+ Added Admin layout page that shows a specific reservation. Can be accessed from the all reservations list or the new reservations list.

--- a/templates/admin.layout.gohtml
+++ b/templates/admin.layout.gohtml
@@ -21,8 +21,12 @@
         <!--Change background to white for the datatable used in admin layout for all reservations.
         Allows for a stripped table look -->
         <style>
-            .content-wrapper{
+            .content-wrapper {
                 background: white;
+            }
+
+            label {
+                font-weight: bold;
             }
         </style>
 
