+ Added button to the admin layout to mark a reservation as processed.
+ Changed CSS z-index of the notie container in the admin layout in order for the session notifications to display properly on the front of the page.

--- a/templates/admin-reservations-show.page.gohtml
+++ b/templates/admin-reservations-show.page.gohtml
@@ -64,7 +64,28 @@
             <hr>
             <input type="submit" class="btn btn-primary" value="Save Reservation">
             <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+            <a href="#!" class="btn btn-info" onclick="processRes({{$res.ID}})">Mark as Processed</a>
+
         </form>
 
     </div>
+{{end}}
+
+{{define "js"}}
+    {{$src := index .StringMap "src"}}
+
+    <script>
+        function processRes(id){
+            attention.custom({
+                icon: 'warning',
+                msg: 'Mark reservation as processed?',
+                callback: function(result){
+                    // If user clicked on OK to process reservation
+                    if(result !== false) {
+                        window.location.href = "/admin/process-reservation/{{$src}}/" + id;
+                    }
+                }
+            })
+        }
+    </script>
 {{end}}
