--- a/templates/admin.layout.gohtml
+++ b/templates/admin.layout.gohtml
@@ -30,6 +30,10 @@
             label {
                 font-weight: bold;
             }
+
+            .notie-container {
+                z-index: 50000;
+            }
         </style>
 
         {{block "css" . }}
