--- a/templates/admin-reservations-calendar.page.gohtml
+++ b/templates/admin-reservations-calendar.page.gohtml
@@ -12,44 +12,68 @@
     {{$curYear := index .StringMap "this_month_year"}}
 
     <div class="col-md-12">
-        <div class="text-center">
-            <h3>{{formatDate $now "January"}} {{formatDate $now "2006"}}</h3>
-        </div>
-
-        <div class="float-start">
-            <a class="btn btn-sm btn-outline-secondary"
-               href="/admin/reservations-calendar?y={{index .StringMap "last_month_year"}}&m={{index .StringMap "last_month"}}">&lt;&lt;</a>
-        </div>
-
-        <div class="float-end">
-            <a class="btn btn-sm btn-outline-secondary"
-               href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}">&gt;&gt;</a>
-
-        </div>
-
-        <div class="clearfix"></div>
-
-        {{range $rooms}}
-            {{$roomID := .ID}}
-            <h4 class="mt-4">{{.RoomName}}</h4>
-            <div class="table-responsive">
-                <table class="table table-bordered table-sm">
-                    <tr class="table-dark">
-                        {{range $index := iterate $days_in_month}}
-                            <td class="text-center">
-                                {{add $index 1}}
-                            </td>
-                        {{end}}
-                    </tr>
-                    <tr>
-                        {{range $index := iterate $days_in_month}}
-                            <td class="text-center">
-                                <input type="checkbox">
-                            </td>
-                        {{end}}
-                    </tr>
-                </table>
-            </div>
-        {{end}}
+    <div class="text-center">
+        <h3>{{formatDate $now "January"}} {{formatDate $now "2006"}}</h3>
     </div>
+
+    <div class="float-start">
+        <a class="btn btn-sm btn-outline-secondary"
+           href="/admin/reservations-calendar?y={{index .StringMap "last_month_year"}}&m={{index .StringMap "last_month"}}">&lt;&lt;</a>
+    </div>
+
+    <div class="float-end">
+        <a class="btn btn-sm btn-outline-secondary"
+           href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}">&gt;&gt;</a>
+
+    </div>
+
+    <div class="clearfix"></div>
+
+    {{range $rooms}}
+        {{$roomID := .ID}}
+        <!-- Data becomes $Data because otherwise Golang interprets that the Data key is inside the rooms range function -->
+        <!--(printf "block_map_%d" .ID) resolves to index $.Data "block_map_1", 2, and so forth. -->
+        {{$blocks := index $.Data (printf "block_map_%d" .ID)}}
+        {{$reservations := index $.Data (printf "reservation_map_%d" .ID)}}
+        <h4 class="mt-4">{{.RoomName}}</h4>
+        <div class="table-responsive">
+            <table class="table table-bordered table-sm">
+                <tr class="table-dark">
+                    {{range $index := iterate $days_in_month}}
+                        <td class="text-center">
+                            {{add $index 1}}
+                        </td>
+                    {{end}}
+                </tr>
+                <tr>
+                    {{range $index := iterate $days_in_month}}
+                        <td class="text-center">
+                            <!--If there is a reservation for the current day in the table, display it -->
+                            <!--Otherwise, display the checkbox. -->
+                            {{if gt (index $reservations (printf "%s-%s-%d" $curYear $curMonth (add $index 1))) 0}}
+                                <a href="/admin/reservations/cal/{{index $reservations (printf "%s-%s-%d" $curYear $curMonth (add $index 1)) }}">
+                                    <span class="text-danger">R</span>
+                                </a>
+                            {{else}}
+
+                                <!-- If the block entry for the current year, month, and day 1 has a room restriction ID greater
+                                than 0, it means that it is a timeblock blocked by the owner, so the box should be checked.-->
+                                <input
+                                        {{if gt (index $blocks (printf "%s-%s-%d" $curYear $curMonth (add $index 1))) 0}}
+                                            checked
+                                            name="remove_block_{{$roomID}}_{{printf "%s-%s-%d" $curYear $curMonth (add $index 1)}}"
+                                            value="{{index $blocks (printf "%s-%s-%d" $curYear $curMonth (add $index 1))}}"
+                                        {{else}}
+                                            name="add_block_{{$roomID}}_{{printf "%s-%s-%d" $curYear $curMonth (add $index 1)}}"
+                                        {{end}}
+                                        type="checkbox">
+                            {{end}}
+                        </td>
+                    {{end}}
+
+                </tr>
+            </table>
+        </div>
+        </div>
+    {{end}}
 {{end}}
