--- a/templates/admin-reservations-show.page.gohtml
+++ b/templates/admin-reservations-show.page.gohtml
@@ -64,7 +64,13 @@
             <hr>
             <div class="float-start">
                 <input type="submit" class="btn btn-primary" value="Save Reservation">
-                <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+                <!-- If the user comes from the reservation calendar, take them there. Otherwise take them to the reservations page.-->
+                {{if eq $src "cal"}}
+                    <a href="#!" onclick="window.history.go(-1)" class="btn btn-warning">Cancel</a>
+                {{else}}
+                    <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+
+                {{end}}
                 <a href="#!" class="btn btn-info" onclick="processRes({{$res.ID}})">Mark as Processed</a>
 
             </div>
