Added basic routing for the reservation calendar post form.

--- a/templates/home.page.gohtml
+++ b/templates/home.page.gohtml
@@ -37,14 +37,10 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1 class="text-center mt-4">Welcome to Fort Smythe Bed and Breakfast</h1>
+                <h1 class="text-center mt-4">Welcome to Lavender Lodgings Bed and Breakfast</h1>
                 <p>
-                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.
-                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.
-                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.
-                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.
-                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.
-                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.
+                    Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.
+                    This totally real place is the highest rated cabin complex in AirBNB, equipped with the latest amenities and all the comforts you will ever need.
                 </p>
             </div>
         </div>
