--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>My Nice Page</title>
+        <title>Lavender Lodgings</title>
 
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,15 @@
               href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker-bs5.min.css">
         <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
         <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
-
+        <style>
+            .my-footer {
+                height: 9em;
+                background-color: #163b65;
+                padding: 1em;
+                color: white;
+                font-size: 80%;
+            }
+        </style>
     </head>
 
     <body>
@@ -81,16 +89,21 @@
 
     <footer class="my-footer">
         <div class="row">
-            <div class="col">
-                left
+            <div class="col text-center">
+                <strong>Lavender Lodgings </strong><br>
+                100 Rocky Road <br>
+                Northbrook, Ontario <br>
+                Canada <br>
             </div>
 
             <div class="col">
-                center
+                (416) 555-1212 <br>
+                <a href="mailto:info@lavender.ca">info@lavender.ca</a>
             </div>
 
             <div class="col">
-                right
+                <strong>Your home away</strong><br>
+                <strong>from home</strong>
             </div>
         </div>
     </footer>
